# lossrun

./: .gitignore  wf_property_lossrun_extraction_schema.json  wf_property_lossrun_persistence_mapping.md  wf_property_lossrun_schema.sql
scripts/: run_pulse.py
wf_lossrun_persistence/: pyproject.toml  requirements.txt
wf_lossrun_persistence/tests/: test_service.py
wf_lossrun_persistence/wf_lossrun_persistence/: __init__.py  cli.py  exceptions.py  models.py  pulse_extraction.py  service.py  sql.py
